--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -26,7 +26,8 @@ source = ~/.config/hypr/binds.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=HDMI-A-2,1920x1080@144,0x0,1
+monitor=DP-4,2560x1440@165,1920x0,1
 
 
 ###################
