--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -4,10 +4,10 @@
     // sourced from header module //
     
         "layer": "top",
-        "output": [ "eDP-1" ],
+       // "output": [ "eDP-1" ],
         "position": "top",
         "mod": "dock",
-        "height": 28,
+        "height": 30,
         "exclusive": true,
         "passthrough": false,
         "gtk-layer-shell": true,
@@ -16,7 +16,7 @@
     
     // positions generated based on config.ctl //
     
-        "modules-left": ["custom/padd","custom/l_end","cpu","memory","custom/cpuinfo","custom/gpuinfo","custom/r_end","custom/l_end", /*"idle_inhibitor",*/"clock","custom/r_end","custom/padd"],
+        "modules-left": ["custom/padd","custom/l_end","cpu","memory","custom/cpuinfo","custom/gpuinfo","custom/gpuinfo#nvidia","custom/r_end","custom/l_end", /*"idle_inhibitor",*/"clock","custom/r_end","custom/padd"],
         "modules-center": ["custom/padd","custom/l_end","hyprland/workspaces","hyprland/window","custom/r_end","custom/padd"],
         "modules-right": ["custom/padd","custom/l_end","backlight","network","pulseaudio","pulseaudio#microphone","custom/updates","custom/keybindhint","custom/r_end","custom/l_end","privacy","tray","battery","custom/r_end","custom/l_end","custom/wallchange","custom/theme","custom/wbar","custom/cliphist","custom/power","custom/r_end","custom/padd"],
     
@@ -71,7 +71,7 @@
         },
     
         "custom/gpuinfo#nvidia": {
-            "exec": " gpuinfo.sh --use nvidia ",
+            "exec": "~/.config/waybar/scripts/gpuinfo.sh --use nvidia ",
             "return-type": "json",
             "format": "{}",
             "rotate": 0,
