changed monitor detection and kitty shutdown

--- a/PC/kitty/.config/kitty/kitty.conf
+++ b/PC/kitty/.config/kitty/kitty.conf
@@ -14,3 +14,5 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
  repaint_delay 2
  sync_to_monitor no
  wayland_enable_ime no
+
+confirm_os_window_close 0 # when a process is using kitty, e.g nvim or btop it prompts you if you meant to close it, set this value to 0 to disable that
