--- a/PC/hypr/.config/hypr/hyprland.conf
+++ b/PC/hypr/.config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ source = ~/.config/hypr/binds.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-2,1920x1080@144,0x0,1
-monitor=DP-4,2560x1440@165,1920x0,1
+monitor==name_desc:AOC 24G2W1G3-,1920x1080@144,0x0,1
+monitor=name_desc:LG Electronics LG ULTRAGEAR,2560x1440@165,1920x0,1 # use the real monitor names, HDMI-A-2, DP-4 etc. will change on every boot
 
 
 ###################
