--- a/PC/hypr/.config/hypr/hyprland.conf
+++ b/PC/hypr/.config/hypr/hyprland.conf
@@ -62,6 +62,7 @@ exec-once = waybar & hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Ice
 
 
 #####################
