--- a/Laptop/hypr/.config/hypr/hyprpaper.conf
+++ b/Laptop/hypr/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/ben1/Pictures/astroDark.png
-wallpaper = eDP-1,/home/ben1/Pictures/astroDark.png
+preload = /home/ben1/Pictures/storm.jpg
+wallpaper = eDP-1,/home/ben1/Pictures/storm.jpg
 
