--- a/Laptop/hypr/.config/hypr/binds.conf
+++ b/Laptop/hypr/.config/hypr/binds.conf
@@ -16,6 +16,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, F, fullscreen,
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
