--- a/Laptop/hypr/.config/hypr/hyprland.conf
+++ b/Laptop/hypr/.config/hypr/hyprland.conf
@@ -61,7 +61,7 @@ exec-once = waybar & hyprpaper
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = XCURSOR_THEME,Bibata-Modern-Ice
 
 #####################
 ### LOOK AND FEEL ###
