--- a/Laptop/hypr/.config/hypr/binds.conf
+++ b/Laptop/hypr/.config/hypr/binds.conf
@@ -17,6 +17,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, L, exec, hyprshot -m output
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
