--- a/Laptop/yazi/.config/yazi/yazi.toml
+++ b/Laptop/yazi/.config/yazi/yazi.toml
@@ -56,6 +56,9 @@ play = [
 	{ run = 'mpv --force-window %*', orphan = true, for = "windows" },
 	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read _''', block = true, desc = "Show media info", for = "unix" },
 ]
+zathura = [
+	{ run = 'zathura "$@"', desc = "Zathura", for = "linux" },
+]
 
 [open]
 rules = [
@@ -69,6 +72,8 @@ rules = [
 	{ mime = "{audio,video}/*", use = [ "play", "reveal" ] },
 	# Archive
 	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", use = [ "extract", "reveal" ] },
+    # PDF
+    { mime = 'application/pdf', use = ['zathura', 'reveal'] },
 	# JSON
 	{ mime = "application/{json,ndjson}", use = [ "edit", "reveal" ] },
 	{ mime = "*/javascript", use = [ "edit", "reveal" ] },
