--- a/common/hypr/.config/hypr/hyprland.local.conf
+++ b/common/hypr/.config/hypr/hyprland.local.conf
@@ -1,3 +1,3 @@
-monitor=name_desc:AOC 24G2W1G3-,1920x1080@144,0x0,1
+monitor=HDMI-A-2,1920x1080@144,0x0,1
 monitor=name_desc:LG Electronics LG ULTRAGEAR,2560x1440@165,1920x0,1
 
