some animation changes

--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -130,21 +130,31 @@ animations {
     bezier = quick,0.15,0,0.1,1
 
     animation = global, 1, 10, default
+
+    # the border around the active window, this controls how fast if fades in and out
     animation = border, 1, 5.39, easeOutQuint
+
+    # creating new windows, closing them etc
     animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 1%
+    animation = windowsOut, 1, 1.49, linear, popin 1%
+
+    # opacity fading
     animation = fadeIn, 1, 1.73, almostLinear
     animation = fadeOut, 1, 1.46, almostLinear
     animation = fade, 1, 3.03, quick
+
+    # notifications (dunst) and app launchers (wofi), any kind of popup
     animation = layers, 1, 3.81, easeOutQuint
     animation = layersIn, 1, 4, easeOutQuint, fade
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+
+    # slide between workspaces instead of fading them
+    animation = workspaces, 1, 4.5, easeOutQuint, slidefade
+    animation = workspacesIn, 1, 7, easeOutQuint, slidefade
+    animation = workspacesOut, 1, 4.5, easeOutQuint, slidefade
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -225,6 +235,6 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = opacity 0.7, class:^(org.pwmt.zathura)$,
+windowrule = opacity 0.7, class:^(org.pwmt.zathura)$, # make zathurua (pdf viewer) see through 
 
 
