changed speed of opening and closing windows

--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -129,6 +129,9 @@ animations {
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
 
+
+    # animation = <target>, <enabled>, <speed>, <easing>, <optional style>
+
     animation = global, 1, 10, default
 
     # the border around the active window, this controls how fast if fades in and out
@@ -136,8 +139,8 @@ animations {
 
     # creating new windows, closing them etc
     animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 1%
-    animation = windowsOut, 1, 1.49, linear, popin 1%
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 60%
+    animation = windowsOut, 1, 2, linear, popin 30%
 
     # opacity fading
     animation = fadeIn, 1, 1.73, almostLinear
