--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -6,7 +6,7 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
