--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi --show drun
 
 
 #################
