--- a/common/kitty/.config/kitty/hyde.conf
+++ b/common/kitty/.config/kitty/hyde.conf
@@ -11,7 +11,7 @@ window_padding_width 25
 cursor_trail 0
 
 # Themes can override any settings in this file
-include theme.conf
+include colors.conf
 background_opacity 0.7
 #hide_window_decorations yes
 #confirm_os_window_close 0
