--- a/common/waybar/.config/waybar/config.jsonc
+++ b/common/waybar/.config/waybar/config.jsonc
@@ -18,7 +18,7 @@
     
         "modules-left": ["custom/padd","custom/l_end","cpu","memory","custom/cpuinfo","custom/gpuinfo","custom/gpuinfo#nvidia","custom/r_end","custom/l_end", /*"idle_inhibitor",*/"clock","custom/r_end","custom/padd"],
         "modules-center": ["custom/padd","custom/l_end","hyprland/workspaces","hyprland/window","custom/r_end","custom/padd"],
-        "modules-right": ["custom/padd","custom/l_end","backlight","network","pulseaudio","pulseaudio#microphone","custom/updates","privacy","battery","tray","custom/r_end"],
+        "modules-right": ["custom/padd","custom/l_end","backlight","network", "mpd", "pulseaudio","pulseaudio#microphone","custom/updates","privacy","battery","tray","custom/r_end"],
     
     
     // sourced from modules based on config.ctl //
@@ -199,6 +199,11 @@
             "format-alt": "<span foreground='#99ffdd'> {bandwidthDownBytes}</span> <span foreground='#ffcc66'> {bandwidthUpBytes}</span>",
             "interval": 2,
         },
+    "mpd": {
+        "format": "{stateIcon} {artist} - {title} ",
+        "format-stopped": "",
+        "interval": 5
+    },
     
     "pulseaudio": {
         "format": "{icon} {volume}",
