icon for music stop

--- a/common/waybar/.config/waybar/config.jsonc
+++ b/common/waybar/.config/waybar/config.jsonc
@@ -201,7 +201,7 @@
         },
     "mpd": {
         "format": "{stateIcon} {artist} - {title} ",
-        "format-stopped": "",
+        "format-stopped": "󰝛",
         "interval": 5
     },
     
