--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ $menu = rofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & dunst
+exec-once = waybar & swww-daemon & dunst
 
 
 #############################
