--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -63,7 +63,7 @@ exec-once = waybar & swww-daemon & dunst
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_THEME,Oxygen-29-White-Sky
 
 #####################
 ### LOOK AND FEEL ###
