swap around time/date

--- a/common/waybar/.config/waybar/config.jsonc
+++ b/common/waybar/.config/waybar/config.jsonc
@@ -112,9 +112,9 @@
         }, */
         "clock": {
             "interval": 1, // this updates the clock every second
-            "format": "{:%I:%M:%S %p}",
+            "format-alt": "{:%I:%M:%S %p}",
             "rotate": 0,
-            "format-alt": "{:%R:%S 󰃭 %d·%m·%y}",
+            "format": "{:%R:%S 󰃭 %d·%m·%y}",
             "tooltip-format": "<span>{calendar}</span>",
             "calendar": {
                 "mode": "month",
