--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -19,6 +19,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, U, exec, hyprshot -m output
 bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/forest.jpg
+bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
+bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh random
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
