added another bind for hyprshot

--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -18,7 +18,8 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, U, exec, hyprshot -m output
-bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/forest.jpg
+bind = $mainMod SHIFT, U, exec, hyprshot -m region
+bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
 bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
 bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh random
 #bind = $mainMod, J, togglesplit, # dwindle
