--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -22,6 +22,7 @@ bind = $mainMod SHIFT, U, exec, hyprshot -m region
 bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
 bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
 bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh random
+bind = $mainMod SHIFT, X, exec, ~/Documents/scripts/setWallpaper1.sh random
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
