--- a/common/hypr/.config/hypr/hyprland.local.conf
+++ b/common/hypr/.config/hypr/hyprland.local.conf
@@ -1,3 +1,2 @@
-monitor=HDMI-A-2,1920x1080@144,0x0,1
-monitor=name_desc:LG Electronics LG ULTRAGEAR,2560x1440@165,1920x0,1
-
+monitor=DP-4,2560x1440@165,0x0,1
+monitor=HDMI-A-2,1920x1080@144,-1920x0,1
