super shift web browser

--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -7,6 +7,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
+$browser = firefox --new-window --app
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -18,12 +19,16 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, U, exec, hyprshot -m output
-bind = $mainMod SHIFT, U, exec, hyprshot -m region
+bind = $mainMod CTRL, U, exec, hyprshot -m region
 bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
 bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
 bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh random
-bind = $mainMod SHIFT, X, exec, ~/Documents/scripts/setWallpaper1.sh random
+bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper1.sh random
 #bind = $mainMod, J, togglesplit, # dwindle
+
+# SUPER + SHIFT
+bind = $mainMod SHIFT, Y, exec, $browser="www.youtube.com"
+bind = $mainMod SHIFT, C, exec, $browser="https://chatgpt.com/"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
