github and neetcode

--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -29,6 +29,8 @@ bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper1.sh random
 # SUPER + SHIFT
 bind = $mainMod SHIFT, Y, exec, $browser="www.youtube.com"
 bind = $mainMod SHIFT, C, exec, $browser="https://chatgpt.com/"
+bind = $mainMod SHIFT, G, exec, $browser="https://github.com/"
+bind = $mainMod SHIFT, N, exec, $browser="https://neetcode.io/roadmap"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
