--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -32,6 +32,7 @@ bind = $mainMod SHIFT, C, exec, $browser="https://chatgpt.com/"
 bind = $mainMod SHIFT, G, exec, $browser="https://github.com/"
 bind = $mainMod SHIFT, N, exec, $browser="https://neetcode.io/roadmap"
 bind = $mainMod SHIFT, T, exec, thunderbird
+bind = $mainMod SHIFT, L, exec, $browser="https://www.linkedin.com/jobs/"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
