--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -22,8 +22,8 @@ bind = $mainMod, U, exec, hyprshot -m output
 bind = $mainMod CTRL, U, exec, hyprshot -m region
 bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
 bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
-bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh random
-bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper1.sh random
+bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh iterate
+bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper.sh random
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # SUPER + SHIFT
