stock market bind

--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -33,6 +33,7 @@ bind = $mainMod SHIFT, G, exec, $browser="https://github.com/"
 bind = $mainMod SHIFT, N, exec, $browser="https://neetcode.io/roadmap"
 bind = $mainMod SHIFT, T, exec, thunderbird
 bind = $mainMod SHIFT, L, exec, $browser="https://www.linkedin.com/jobs/"
+bind = $mainMod SHIFT, F, exec, $browser="https://finance.yahoo.com/"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
