--- a/common/kitty/.config/kitty/hyde.conf
+++ b/common/kitty/.config/kitty/hyde.conf
@@ -1,12 +1,12 @@
 # This is the configuration file for kitty terminal
 # For more information, see https://sw.kovidgoyal.net/kitty/conf.html
 # For your custom configurations, put it in ./kitty.conf
-font_family FiraCode Nerd Font
+font_family Liberation Mono
 bold_font auto
 italic_font auto
 bold_italic_font auto
 enable_audio_bell no
-font_size 11.0
+font_size 7.0
 window_padding_width 25
 cursor_trail 0
 
