--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -17,3 +17,11 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
 
 
 confirm_os_window_close 0 # when a process is using kitty, e.g nvim or btop it prompts you if you meant to close it, set this value to 0 to disable that
+
+
+# tab bar colors
+active_tab_foreground   #11111b
+active_tab_background   #cba6f7
+inactive_tab_foreground #cdd6f4
+inactive_tab_background #181825
+tab_bar_background      #11111b
