--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -97,8 +97,8 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.8
-    inactive_opacity = 0.7
+    active_opacity = 1
+    inactive_opacity = 1
 
     shadow {
         enabled = true
@@ -211,7 +211,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+#    workspace_swipe = false
 }
 
 # Example per-device config
