--- a/common/tmux/.tmux.conf
+++ b/common/tmux/.tmux.conf
@@ -1,9 +1,28 @@
-# Change prefix to Ctrl + s
+# Change prefix to Ctrl+s
 set -g prefix C-s
 unbind C-b
-set -g mouse on
-set -g base-index 1 # base 1 indexing for windows
-set -g renumber-windows on # renumber windows when closing others
+
+set -g mouse on               # Enable mouse support
+set -g base-index 1           # start window numbering at 1
+set -g renumber-windows on    # renumber windows when closing others
+
+# Terminal & cursor
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:Ss=\E[6 q:Se=\E[6 q'  # dynamic cursor shape
+
+# Reload config with prefix + r
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
+# better copying and pasting
+set-option -g set-clipboard on
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
+
+
+
+# ==========================
+# MOVEMENT
+# ==========================
 
 
 # Vim-style pane navigation
@@ -23,10 +42,11 @@ bind -n M-l resize-pane -R 5
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-# Reload config with prefix + r
-unbind r
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
+
+# ==========================
+# PLUGINS
+# ==========================
 
 
 # Enable TPM (Tmux Plugin Manager)
@@ -36,11 +56,20 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # tmux saves across reboots
 set -g @plugin 'tmux-plugins/tmux-continuum' # works with resurrect for auto-save and auto-restore of sessions
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'minhdanh/tmux-network-speed'
 set -g @plugin 'omerxx/tmux-session-manager' # TUI for switching sessions
 set -g @plugin 'jaclu/tmux-menus'
 
 
-# styling
+# tmux resurrection
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+
+
+# ==========================
+# STYLING
+# ==========================
+
 
 set -g @catppuccin_flavor "mocha" # latte, frappe, macchiato, or mocha
 set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
@@ -48,7 +77,6 @@ set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, cust
 # Make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
@@ -57,8 +85,13 @@ set -agF status-right "#{E:@catppuccin_status_battery}"
 
 
 
-set-option -g set-clipboard on
 
+
+
+
+# =========================
+# CONFIGURATION
+# =========================
 
 # mkdir -p ~/.config/tmux/plugins/catppuccin
 # git clone -b v2.1.3 https://github.com/catppuccin/tmux.git ~/.config/tmux/plugins/catppuccin/tmux
