--- a/common/kitty/.config/kitty/kitty.conf
+++ b/common/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
 include hyde.conf
+include /home/ben1/.cache/wal/colors-kitty.conf
 
 # Minimal Tab bar styling 
 tab_bar_edge                bottom
