--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -20,7 +20,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, U, exec, hyprshot -m output
 bind = $mainMod CTRL, U, exec, hyprshot -m region
-bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
+bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpapers1/pexels-peter-olexa-2214257-3875821.jpg
 bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
 bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh iterate
 bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper.sh random
