--- a/common/hypr/.config/hypr/hyprland.local.conf
+++ b/common/hypr/.config/hypr/hyprland.local.conf
@@ -1,2 +1,2 @@
-monitor=DP-4,2560x1440@165,0x0,1
-monitor=HDMI-A-2,1920x1080@144,-1920x0,1
+monitor=DP-7,2560x1440@100,0x0,1
+monitor=eDP-1,1920x1080@60,-1920x0,1
