hypr nvim yazi update

--- a/common/hypr/.config/hypr/binds.conf
+++ b/common/hypr/.config/hypr/binds.conf
@@ -20,10 +20,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, U, exec, hyprshot -m output
 bind = $mainMod CTRL, U, exec, hyprshot -m region
-bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpapers1/pexels-peter-olexa-2214257-3875821.jpg
-bind = $mainMod, W, exec, ~/Documents/scripts/setWallpaper.sh ~/Pictures/wallpaper.png
-bind = $mainMod, X, exec, ~/Documents/scripts/setWallpaper.sh iterate
-bind = $mainMod CTRL, X, exec, ~/Documents/scripts/setWallpaper.sh random
+bind = $mainMod, O, exec, swaylock -c 000000 -i ~/Pictures/wallpaper.png
+bind = $mainMod, X, exec, ~/Documents/comp/scripts/setWallpaper.sh iterate
 #bind = $mainMod, J, togglesplit, # dwindle
 
 # SUPER + SHIFT
@@ -34,12 +32,20 @@ bind = $mainMod SHIFT, N, exec, $browser="https://neetcode.io/roadmap"
 bind = $mainMod SHIFT, T, exec, thunderbird
 bind = $mainMod SHIFT, L, exec, $browser="https://www.linkedin.com/jobs/"
 bind = $mainMod SHIFT, F, exec, $browser="https://finance.yahoo.com/"
+bind = $mainMod SHIFT, X, exec, ~/Documents/comp/scripts/setWallpaper1.sh iterate
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# swap windows in the current workspace
+bind = $mainMod CTRL, h, swapwindow, l   # Swap current window with the one to the left
+bind = $mainMod CTRL, l, swapwindow, r   # Swap current window with the one to the right
+bind = $mainMod CTRL, k, swapwindow, u   # Swap current window with the one above
+bind = $mainMod CTRl, j, swapwindow, d   # Swap current window with the one below
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
