--- a/common/hypr/.config/hypr/hyprland.local.conf
+++ b/common/hypr/.config/hypr/hyprland.local.conf
@@ -1,2 +1,7 @@
-monitor=DP-7,2560x1440@100,0x0,1
-monitor=eDP-1,1920x1080@60,-1920x0,1
+monitor=HDMI-A-2,1920x1080@100,0x360,1
+monitor=DP-4,2560x1440@165,3000x0,1
+monitor=DP-5,1920x1080@165,1920x0,1,transform,1
+monitor=eDP-1,1920x1080@60,1920x0,1
+
+#monitor=HDMI-A-2,disable
+#monitor=DP-5,disable
