--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -64,6 +64,8 @@ exec-once = waybar & swww-daemon & dunst
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Oxygen-29-White-Sky
+env = QT_STYLE_OVERRIDE,kvantum
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
