removed plugins from yazi.toml and changed name to url in flavor.toml

--- a/common/yazi/.config/yazi/flavors/onedark.yazi/flavor.toml
+++ b/common/yazi/.config/yazi/flavors/onedark.yazi/flavor.toml
@@ -145,7 +145,7 @@ rules = [
 
     # Fallback
     { name = "*", fg = "#ABB2BF" },  # Blue
-    { name = "*/", fg = "#61AFEF" }  # Blue
+    { url = "*/", fg = "#61AFEF" }  # Blue
 ]
 
 # : }}}
