--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -235,11 +235,11 @@ device {
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+#windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+#windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = opacity 0.7, class:^(org.pwmt.zathura)$, # make zathurua (pdf viewer) see through 
+#windowrule = opacity 0.7, class:^(org.pwmt.zathura)$, # make zathurua (pdf viewer) see through 
 
 
