--- a/common/yazi/.config/yazi/flavors/catppuccin-frappe.yazi/flavor.toml
+++ b/common/yazi/.config/yazi/flavors/catppuccin-frappe.yazi/flavor.toml
@@ -5,10 +5,6 @@
 [mgr]
 cwd = { fg = "#81c8be" }
 
-# Hovered
-hovered         = { reversed = true }
-preview_hovered = { underline = true }
-
 # Find
 find_keyword  = { fg = "#e5c890", bold = true, italic = true, underline = true }
 find_position = { fg = "#f4b8e4", bg = "reset", bold = true, italic = true }
@@ -18,11 +14,6 @@ marker_copied   = { fg = "#a6d189", bg = "#a6d189" }
 marker_cut      = { fg = "#e78284", bg = "#e78284" }
 marker_marked   = { fg = "#81c8be", bg = "#81c8be" }
 marker_selected = { fg = "#e5c890", bg = "#e5c890" }
-
-# Tab
-tab_active   = { reversed = true }
-tab_inactive = {}
-tab_width    = 1
 
 # Count
 count_copied   = { fg = "#303446", bg = "#a6d189" }
@@ -75,8 +66,8 @@ perm_exec  = { fg = "#a6d189" }
 
 # Progress
 progress_label  = { fg = "#ffffff", bold = true }
-progress_normal = { fg = "#8caaee", bg = "#51576d" }
-progress_error  = { fg = "#e78284", bg = "#51576d" }
+progress_normal = { fg = "#a6d189", bg = "#51576d" }
+progress_error  = { fg = "#e5c890", bg = "#e78284" }
 
 # : }}}
 
@@ -115,7 +106,7 @@ border = { fg = "#8caaee" }
 [tasks]
 border  = { fg = "#8caaee" }
 title   = {}
-hovered = { fg = "#f4b8e4", underline = true }
+hovered = { fg = "#f4b8e4", bold = true }
 
 # : }}}
 
@@ -144,7 +135,18 @@ footer  = { fg = "#414559", bg = "#c6d0f5" }
 # : }}}
 
 
-# : Notify {{{
+# : Spotter {{{
+
+[spot]
+border   = { fg = "#8caaee" }
+title    = { fg = "#8caaee" }
+tbl_col  = { fg = "#81c8be" }
+tbl_cell = { fg = "#f4b8e4", bg = "#51576d" }
+
+# : }}}
+
+
+# : Notification {{{
 
 [notify]
 title_info  = { fg = "#a6d189" }
@@ -159,21 +161,54 @@ title_error = { fg = "#e78284" }
 [filetype]
 
 rules = [
-	# Images
+	# Image
 	{ mime = "image/*", fg = "#81c8be" },
-
 	# Media
 	{ mime = "{audio,video}/*", fg = "#e5c890" },
-
-	# Archives
+	# Archive
 	{ mime = "application/{zip,rar,7z*,tar,gzip,xz,zstd,bzip*,lzma,compress,archive,cpio,arj,xar,ms-cab*}", fg = "#f4b8e4" },
-
-	# Documents
+	# Document
 	{ mime = "application/{pdf,doc,rtf}", fg = "#a6d189" },
-
+	# Virtual file system
+	{ mime = "vfs/{absent,stale}", fg = "#949cbb" },
 	# Fallback
-	{ name = "*", fg = "#c6d0f5" },
-	{ name = "*/", fg = "#8caaee" }
+	{ url = "*", fg = "#c6d0f5" },
+	{ url = "*/", fg = "#8caaee" },
 ]
 
 # : }}}
+
+[icon]
+
+dirs = [
+	{ name = ".config", text = "", fg = "#f4b8e4" },
+	{ name = ".git", text = "", fg = "#81c8be" },
+	{ name = ".github", text = "", fg = "#8caaee" },
+	{ name = ".npm", text = "", fg = "#8caaee" },
+	{ name = "Desktop", text = "", fg = "#81c8be" },
+	{ name = "Development", text = "", fg = "#81c8be" },
+	{ name = "Documents", text = "", fg = "#81c8be" },
+	{ name = "Downloads", text = "", fg = "#81c8be" },
+	{ name = "Library", text = "", fg = "#81c8be" },
+	{ name = "Movies", text = "", fg = "#81c8be" },
+	{ name = "Music", text = "", fg = "#81c8be" },
+	{ name = "Pictures", text = "", fg = "#81c8be" },
+	{ name = "Public", text = "", fg = "#81c8be" },
+	{ name = "Videos", text = "", fg = "#81c8be" },
+]
+conds = [
+	# Special files
+	{ if = "orphan", text = "", fg = "#c6d0f5" },
+	{ if = "link", text = "", fg = "#838ba7" },
+	{ if = "block", text = "", fg = "#eebebe" },
+	{ if = "char", text = "", fg = "#eebebe" },
+	{ if = "fifo", text = "", fg = "#eebebe" },
+	{ if = "sock", text = "", fg = "#eebebe" },
+	{ if = "sticky", text = "", fg = "#eebebe" },
+	{ if = "dummy", text = "", fg = "#e78284" },
+
+	# Fallback
+	{ if = "dir", text = "", fg = "#8caaee" },
+	{ if = "exec", text = "", fg = "#a6d189" },
+	{ if = "!dir", text = "", fg = "#c6d0f5" },
+]
