--- a/common/hypr/.config/hypr/hyprland.conf
+++ b/common/hypr/.config/hypr/hyprland.conf
@@ -242,4 +242,5 @@ device {
 
 #windowrule = opacity 0.7, class:^(org.pwmt.zathura)$, # make zathurua (pdf viewer) see through 
 
+windowrule = opacity 0.7, match:class ^org.pwmt.zathura$
 
